language/move-lang/tests/move_check/parser/hexstring_token_eof2.exp
error: 

   ┌── tests/move_check/parser/hexstring_token_eof2.move:3:9 ───
   │
 3 │         x"abcd
   │         ^^^^^^ Missing closing quote (") after byte string
   │

